--- a/static/assets/css/pages/_checkOut.scss
+++ b/static/assets/css/pages/_checkOut.scss
@@ -183,7 +183,7 @@
                 }
             }
         }
-        .order-summery {
+        .your-order {
             width: 80%;
             .title {
                 font-size: 32px;
