--- a/static/assets/css/pages/_index.scss
+++ b/static/assets/css/pages/_index.scss
@@ -3,7 +3,7 @@
 @forward './signIn';
 @forward './cart';
 @forward './product';
-// @forward './checkout';
+@forward './checkout';
 @forward './feedback';
 @forward './dashboard';
 @forward './about';
