--- a/static/assets/css/components/_productCard.scss
+++ b/static/assets/css/components/_productCard.scss
@@ -13,6 +13,13 @@
         // padding: 55px 10px;
         text-align: center;
         margin-bottom: 1em;
+        .product-image{
+            max-width: 300px;
+            width: 100%;
+            img {
+                height: 200px;
+            }
+        }
     }
     &__single {
         .product-card__box {
