--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -340,6 +340,13 @@ button:active, button:focus {
   text-align: center;
   margin-bottom: 1em;
 }
+.product-card__box .product-image {
+  max-width: 300px;
+  width: 100%;
+}
+.product-card__box .product-image img {
+  height: 200px;
+}
 .product-card__single .product-card__box {
   padding: 40px 25px;
 }
@@ -2943,6 +2950,10 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   margin-bottom: 0;
   height: 100%;
+}
+.product-picture--max---card .product-image img {
+  max-width: 650px;
+  width: 100%;
 }
 .product-picture--min {
   flex: 0;
