--- a/static/assets/css/pages/_auction.scss
+++ b/static/assets/css/pages/_auction.scss
@@ -14,6 +14,9 @@
         flex-direction: row;
         gap: 50px;
 
+        h4{
+            width: 100px;
+        }
         .img {
             width: 50%;
             display: flex;
@@ -25,9 +28,12 @@
 
                 padding: 30px;
                 text-align: center;
+                width: 500px;
                 img {
                     max-width: 500px;
                     width: 100%;
+                    height: 370px;
+                    object-fit: contain;
                 }
             }
         }
@@ -43,17 +49,20 @@
                 &--number {
                     font-size: 16px;
                     font-weight: 400;
+                    width: 100%;
                 }
 
                 &--hours {
                     font-size: 16px;
                     font-weight: 400;
+                    width: 100%;
                 }
 
                 &--highest {
                     margin-top: 10px;
                     font-size: 18px;
                     font-weight: 500;
+                    width: 100%;
                 }
 
                 .bid {
