--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -5505,6 +5505,9 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: row;
   gap: 50px;
 }
+.auction-img h4 {
+  width: 100px;
+}
 .auction-img .img {
   width: 50%;
   display: flex;
@@ -5515,10 +5518,14 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: inset 0px 0px 10px rgba(184, 180, 180, 0.55);
   padding: 30px;
   text-align: center;
+  width: 500px;
 }
 .auction-img .img .grid-list--picture---first img {
   max-width: 500px;
   width: 100%;
+  height: 370px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .auction-img .bidding-area {
   padding: 30px;
@@ -5529,15 +5536,18 @@ h1, h2, h3, h4, h5, h6 {
 .auction-img .bidding-area--number {
   font-size: 16px;
   font-weight: 400;
+  width: 100%;
 }
 .auction-img .bidding-area--hours {
   font-size: 16px;
   font-weight: 400;
+  width: 100%;
 }
 .auction-img .bidding-area--highest {
   margin-top: 10px;
   font-size: 18px;
   font-weight: 500;
+  width: 100%;
 }
 .auction-img .bidding-area .bid {
   display: flex;
