--- a/static/assets/css/pages/_cart.scss
+++ b/static/assets/css/pages/_cart.scss
@@ -91,6 +91,7 @@
         border-left: 1px solid #e3e3e3;
         border-right: 1px solid #e3e3e3;
         border-bottom: 1px solid #e3e3e3;
+        border-top: 1px solid #e3e3e3;
         margin-bottom: 30px;
         h5 {
           font-size: 18px;
