--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2824,6 +2824,7 @@ h1, h2, h3, h4, h5, h6 {
   border-left: 1px solid #e3e3e3;
   border-right: 1px solid #e3e3e3;
   border-bottom: 1px solid #e3e3e3;
+  border-top: 1px solid #e3e3e3;
   margin-bottom: 30px;
 }
 .cart-section--bill .total h5 {
