--- a/static/assets/css/pages/_checkOut.scss
+++ b/static/assets/css/pages/_checkOut.scss
@@ -118,7 +118,7 @@
                 }
                 button {
                     border: none;
-                    background: #ff0000;
+                    background: $secondaryColor;
                     padding: 20px 20px;
                     border-radius: 5px;
                     color: #ffffff;
