--- a/static/assets/css/pages/_product.scss
+++ b/static/assets/css/pages/_product.scss
@@ -38,6 +38,8 @@
                     img {
                         max-width: 650px;
                         width: 100%;
+                        height: 400px;
+                        object-fit: cover;
                     }
                 }
             }
@@ -269,7 +271,7 @@
             &--tab {
                 li {
                     font-size: 24px;
-                    color: #3f3f3f;
+                    color: #000000;
                     margin-bottom: 0;
 
                     &.active {
@@ -728,6 +730,7 @@
     .product {
         &-details {
             .title {
+                padding-top: 30px;
                 font-size: 16px;
                 margin-bottom: 15px;
             }
